Created Makefile and ft_strlcpy.c

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,14 @@ main
 main.c
 tests/
 a.out
-.gitignore
+ft_bzero.o
+ft_isalnum.o
+ft_isalpha.o
+ft_isascii.o
+ft_isdigit.o
+ft_memcpy.o
+ft_memmove.o
+ft_memset.o
+ft_strlcpy.o
+ft_strlen.o
+main.o
